--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.1.0",
+    "@formatjs/intl-localematcher": "^0.5.4",
     "@hookform/resolvers": "^3.3.4",
     "@neondatabase/serverless": "^0.9.3",
     "@prisma/adapter-neon": "^5.13.0",
@@ -24,10 +25,13 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@reduxjs/toolkit": "^2.2.4",
     "@types/bcryptjs": "^2.4.6",
+    "@types/negotiator": "^0.6.3",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "i18n": "^0.15.1",
     "lucide-react": "^0.378.0",
+    "negotiator": "^0.6.3",
     "next": "14.2.3",
     "next-auth": "5.0.0-beta.18",
     "next-themes": "^0.3.0",
