--- a/package.json
+++ b/package.json
@@ -18,18 +18,27 @@
     "@prisma/client": "^5.13.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@react-pdf/renderer": "^3.4.4",
     "@reduxjs/toolkit": "^2.2.4",
+    "@tanstack/react-table": "^8.17.3",
     "@types/bcryptjs": "^2.4.6",
     "@types/negotiator": "^0.6.3",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "crypto-random-string": "^5.0.0",
+    "cuid": "^3.0.0",
+    "embla-carousel-react": "^8.1.3",
+    "html2canvas": "^1.4.1",
     "i18n": "^0.15.1",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.378.0",
     "negotiator": "^0.6.3",
     "next": "14.2.3",
@@ -39,6 +48,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.1",
+    "react-to-print": "^2.15.1",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
